# static-site-optimizer

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: amp.rs  cli.yml  main.rs  original.rs
