[package]
name = "static-site-optimizer"
version = "0.3.0"
authors = ["Bennett Hardwick <me@bennetthardwick.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "2.33.0", features = [ "yaml" ] }
lol_html = "0.2.0"
